Archive2/2c/4992bc02d50930/output
main.cpp: In function 'int main()':
main.cpp:32:29: error: 'Base' is an inaccessible base of 'Derived'
     Base* d2 = new Derived(1);
                             ^
